implementando hoja de estilos tarea modulo 1 u 4

--- a/Proyecto CV/index.html
+++ b/Proyecto CV/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV JORGE LUIS RODRIGUEZ</title>
-    <link rel="stylesheet" href="estilos_cv.css">
+    <link rel="stylesheet" href="D:\FORMACION JLR\UTN E-LEARNING\DIPLOMATURA EN PROGRAMACION WEB FULL STACK CON REACT JS\TAREAS\TAREA M1 U4\estilos\estilos_cv_tarea_m1_u3.css">
 </head>
 <body>
 
